fix text align block styling & legacy schema

--- a/src/assets/common.css
+++ b/src/assets/common.css
@@ -190,7 +190,7 @@ align-left,
 align-center,
 align-right,
 align-justified {
-    display: inline-block;
+    display: block;
     width: 100%;
 }
 
